--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,20 @@
 	margin: 20px;
 }
 
+.close {
+	color: white;
+	position: absolute;
+}
+
+div.close:hover {
+	color: black;
+}
+
+div.close:after {
+	display: inline-block;
+	content: "\00d7"; /* This will render the 'X' */
+}
+
 .App-link {
 	color: #61dafb;
 }
